nanoc-tutorial/crash.log
Crashlog created at 2018-04-26 13:58:11 -0300

===== MESSAGE:

SyntaxError: lib/tags.rb:2: syntax error, unexpected ';', expecting ']'
  if @item[;tags].nil?
           ^
lib/tags.rb:7: syntax error, unexpected keyword_end, expecting end-of-input

===== STACK TRACE:

  26. from /home/fllsouto/.rvm/gems/ruby-2.5.0/bin/ruby_executable_hooks:15:in `<main>'
  25. from /home/fllsouto/.rvm/gems/ruby-2.5.0/bin/ruby_executable_hooks:15:in `eval'
  24. from /home/fllsouto/.rvm/gems/ruby-2.5.0/bin/nanoc:23:in `<main>'
  23. from /home/fllsouto/.rvm/gems/ruby-2.5.0/bin/nanoc:23:in `load'
  22. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/bin/nanoc:18:in `<top (required)>'
  21. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli.rb:61:in `run'
  20. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli/error_handler.rb:15:in `handle_while'
  19. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli/error_handler.rb:57:in `handle_while'
  18. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli/error_handler.rb:15:in `block in handle_while'
  17. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli.rb:63:in `block in run'
  16. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/cri-2.10.1/lib/cri/command.rb:287:in `run'
  15. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/cri-2.10.1/lib/cri/command.rb:269:in `run'
  14. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/cri-2.10.1/lib/cri/command.rb:329:in `run_this'
  13. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/cri-2.10.1/lib/cri/command_dsl.rb:256:in `block in runner'
  12. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli/command_runner.rb:13:in `call'
  11. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli/error_handler.rb:15:in `handle_while'
  10. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli/error_handler.rb:57:in `handle_while'
  9. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli/error_handler.rb:15:in `block in handle_while'
  8. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli/command_runner.rb:14:in `block in call'
  7. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli/commands/compile.rb:24:in `run'
  6. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli/commands/compile.rb:36:in `run_once'
  5. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/cli/command_runner.rb:57:in `load_site'
  4. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/base/repos/site_loader.rb:14:in `new_from_cwd'
  3. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/base/repos/site_loader.rb:37:in `site_from_config'
  2. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/base/repos/site_loader.rb:37:in `each'
  1. from /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/base/entities/code_snippet.rb:38:in `load'
  /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib/nanoc/base/entities/code_snippet.rb:38:in `eval'

===== VERSION INFORMATION:

Nanoc 4.9.2 © 2007-2018 Denis Defreyne.
Running ruby 2.5.0 (2017-12-25) on x86_64-linux with RubyGems 2.7.3.

===== SYSTEM INFORMATION:

Linux Asimov 4.10.0-42-generic #46~16.04.1-Ubuntu SMP Mon Dec 4 15:57:59 UTC 2017 x86_64 x86_64 x86_64 GNU/Linux

===== INSTALLED GEMS:

  addressable 2.5.2
  adsf 1.2.0, 1.4.1
  allison 2.0.3
  bigdecimal 1.3.4
  builder 3.2.2, 3.2.3
  bundler 1.16.1
  bundler-unload 1.0.2
  celluloid 0.15.2
  cmath 1.0.0
  coderay 1.1.0, 1.1.2
  colored 1.2
  concurrent-ruby 1.0.5
  cri 2.4.1, 2.10.1
  csv 1.0.0
  date 1.0.0
  dbm 1.0.0
  ddmemoize 1.0.0
  ddmetrics 1.0.0
  ddplugin 1.0.2
  did_you_mean 1.2.0
  etc 1.0.0
  executable-hooks 1.3.2
  fcntl 1.0.0
  ffi 1.9.23
  fiddle 1.0.0
  fileutils 1.0.2
  formatador 0.2.5
  gdbm 2.0.0
  gem-wrappers 1.3.2
  guard 2.14.2
  guard-compat 1.2.1
  guard-nanoc 2.1.2
  hamster 3.0.0
  httparty 0.16.2
  io-console 0.4.6
  ipaddr 1.2.0
  json 2.1.0
  kramdown 1.16.2
  listen 3.1.5
  lumberjack 1.0.13
  method_source 0.9.0
  mini_portile2 2.3.0
  minitest 5.10.3
  multi_json 1.13.1
  multi_xml 0.6.0
  nanoc 4.9.2
  nenv 0.3.0
  net-telnet 0.1.1
  nokogiri 1.8.2
  notiffany 0.1.1
  openssl 2.1.0
  parallel 1.12.1
  power_assert 1.1.1
  pry 0.11.3
  psych 3.0.2
  public_suffix 3.0.2
  pygments.rb 1.2.1
  rack 1.5.2, 2.0.5
  rainpress 1.0.1
  rake 10.1.1, 12.3.0
  rb-fsevent 0.10.3
  rb-inotify 0.9.10
  rdoc 6.0.1
  ref 2.0.0
  ruby_dep 1.5.0
  rubygems-bundler 1.4.4
  rvm 1.11.3.9
  scanf 1.0.0
  sdbm 1.0.0
  shellany 0.0.1
  slow_enumerator_tools 1.1.0
  stringio 0.0.1
  strscan 1.0.0
  test-unit 3.2.7
  thor 0.20.0
  timers 1.1.0
  tomlrb 1.2.6
  webrick 1.4.2
  xmlrpc 0.3.0
  zlib 1.0.0

===== LOAD PATHS:

  0. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/ref-2.0.0/lib
  1. /home/fllsouto/.rvm/gems/ruby-2.5.0@global/gems/did_you_mean-1.2.0/lib
  2. /home/fllsouto/.rvm/gems/ruby-2.5.0@global/gems/executable-hooks-1.3.2/lib
  3. /home/fllsouto/.rvm/gems/ruby-2.5.0@global/extensions/x86_64-linux/2.5.0/executable-hooks-1.3.2
  4. /home/fllsouto/.rvm/gems/ruby-2.5.0@global/gems/bundler-unload-1.0.2/lib
  5. /home/fllsouto/.rvm/gems/ruby-2.5.0@global/gems/rubygems-bundler-1.4.4/lib
  6. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/bundler-1.16.1/lib
  7. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/public_suffix-3.0.2/lib
  8. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/addressable-2.5.2/lib
  9. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/colored-1.2/lib
  10. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/cri-2.10.1/lib
  11. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/ddmetrics-1.0.0/lib
  12. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/ref-2.0.0/lib
  13. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/ddmemoize-1.0.0/lib
  14. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/ddplugin-1.0.2/lib
  15. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/concurrent-ruby-1.0.5/lib
  16. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/hamster-3.0.0/lib
  17. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/parallel-1.12.1/lib
  18. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/slow_enumerator_tools-1.1.0/lib
  19. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/tomlrb-1.2.6/lib
  20. /home/fllsouto/.rvm/gems/ruby-2.5.0/gems/nanoc-4.9.2/lib
  21. /home/fllsouto/.rvm/rubies/ruby-2.5.0/lib/ruby/site_ruby/2.5.0
  22. /home/fllsouto/.rvm/rubies/ruby-2.5.0/lib/ruby/site_ruby/2.5.0/x86_64-linux
  23. /home/fllsouto/.rvm/rubies/ruby-2.5.0/lib/ruby/site_ruby
  24. /home/fllsouto/.rvm/rubies/ruby-2.5.0/lib/ruby/vendor_ruby/2.5.0
  25. /home/fllsouto/.rvm/rubies/ruby-2.5.0/lib/ruby/vendor_ruby/2.5.0/x86_64-linux
  26. /home/fllsouto/.rvm/rubies/ruby-2.5.0/lib/ruby/vendor_ruby
  27. /home/fllsouto/.rvm/rubies/ruby-2.5.0/lib/ruby/2.5.0
  28. /home/fllsouto/.rvm/rubies/ruby-2.5.0/lib/ruby/2.5.0/x86_64-linux
